--- a/.pylintrc
+++ b/.pylintrc
@@ -47,7 +47,7 @@ ignored-modules=levmar,
                 matlab,
                 pygsl,
                 ral_nlls,
-                pyceres
+                PyCeres
 
 [DESIGN]
 
