Add ceres software (#1072)
* Add ceres software

* ceres docker install

* Fix linting errors and env variable

* Fix linting errors and env variable#217

* correct formatting in Dockerfile

* Fix linting errors and env variable 2#217

* Fix linting errors flake8 #217

* fix documentation formatting #217

* fix documentation formatting #217

* ceres test #217

* ceres debugging #217

* edit cere cost func

* Fix hanging error #217

* Update docs/source/users/options/minimizer_option.rst

Co-authored-by: Tyrone Rees <tyrone.rees@stfc.ac.uk>

* fix failing unit test#217

* fix failing controller test #217

Co-authored-by: Tyrone Rees <tyrone.rees@stfc.ac.uk>

--- a/.pylintrc
+++ b/.pylintrc
@@ -46,7 +46,8 @@ ignored-modules=levmar,
                 mantid,
                 matlab,
                 pygsl,
-                ral_nlls
+                ral_nlls,
+                PyCeres
 
 [DESIGN]
 
