Add kmpfit software #995

--- a/examples/all_softwares.ini
+++ b/examples/all_softwares.ini
@@ -6,6 +6,7 @@ software: bumps
           gradient_free
           gsl
           horace
+          kmpfit
           levmar
           mantid
           matlab
