--- a/examples/all_softwares.ini
+++ b/examples/all_softwares.ini
@@ -7,6 +7,7 @@ software: bumps
           gsl
           horace
           levmar
+          lmfit
           mantid
           matlab
           matlab_curve
