update docker file fot theseus #1052

--- a/.pylintrc
+++ b/.pylintrc
@@ -47,7 +47,8 @@ ignored-modules=levmar,
                 matlab,
                 pygsl,
                 ral_nlls,
-                PyCeres
+                PyCeres,
+                theseus
 
 [DESIGN]
 
