update dockerfile for lmfit #1096

--- a/Docker/FullInstall/Dockerfile
+++ b/Docker/FullInstall/Dockerfile
@@ -182,6 +182,7 @@ RUN make install
 # Set the PYCERES_LOCATION
 ENV PYCERES_LOCATION=/ceres/ceres-bin/lib
 
+WORKDIR /
 ###########
 # Tidy up #
 ###########
