add docs for nlopt #1037

--- a/examples/all_softwares.ini
+++ b/examples/all_softwares.ini
@@ -13,6 +13,7 @@ software: bumps
           matlab_opt
           matlab_stats
           minuit
+          nlopt
           ralfit
           scipy
           scipy_ls
