--- a/.pylintrc
+++ b/.pylintrc
@@ -48,7 +48,8 @@ ignored-modules=levmar,
                 pygsl,
                 pycutest,
                 ral_nlls,
-                PyCeres
+                PyCeres,
+                lmfit
 
 [DESIGN]
 
