--- a/.pylintrc
+++ b/.pylintrc
@@ -49,6 +49,7 @@ ignored-modules=levmar,
                 pycutest,
                 ral_nlls,
                 PyCeres,
+                theseus,
                 lmfit
 
 [DESIGN]
