add nlopt software #1037 (#1104)
* add nlopt software #1037

* minor fix #1037

* add docs for nlopt #1037

* add tests #1037

* install nlopt on git workflow #1037

* reduce the max evals and remove tolerances #1037

* fix failing test #1037

* fix failing tests #1037

* fix failing tests #1037

* merge conflicts #1037

* merge conflicts #1037

* merge conflicts #1037

* Fix formatting error #1037

* remove global minimizers from default #1037

* remove global minimizers from default #1037

* add regression and options testing #1037

* missing software declaration #1037

* update the csv file  #1037

* fix unit and linting errors #1037

---------

Co-authored-by: Tyrone Rees <tyrone.rees@stfc.ac.uk>
Co-authored-by: Andrew Lister <48282025+AndrewLister-STFC@users.noreply.github.com>

--- a/.pylintrc
+++ b/.pylintrc
@@ -49,8 +49,9 @@ ignored-modules=levmar,
                 pycutest,
                 ral_nlls,
                 PyCeres,
+                nlopt,
                 theseus,
-                lmfit
+                lmfit,
 
 [DESIGN]
 
