--- a/examples/all_softwares.ini
+++ b/examples/all_softwares.ini
@@ -14,6 +14,7 @@ software: bumps
           matlab_opt
           matlab_stats
           minuit
+          nlopt
           ralfit
           scipy
           scipy_ls
