Add to docs, and remove emissions table from some tests

--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -26,6 +26,11 @@ make_plots: no
 
 results_dir: new_results/
 
+table_type: acc
+            runtime
+            compare
+            local_min
+
 [LOGGING]
 
 external_output: log_only
