--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,12 +133,10 @@ jobs:
     name: 'Default Unit Tests (Windows)'
     runs-on: 'windows-latest'
     steps:
-    - name: download MS-MPI setup
-      run: curl -L -O https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe
-    - name: Install mpiexec.exe
-      run: .\msmpisetup.exe -unattend -force
-    - name: put MSMPI_BIN on PATH
-      run: echo "C:\Program Files\Microsoft MPI\Bin\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+    - name: Setup MPI (intelmpi)
+      uses: mpi4py/setup-mpi@v1.2.0
+      with:
+        mpi: intelmpi
     - name: Checkout code
       uses: actions/checkout@v3
     - name: 'Choose Python Version'
