--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,9 +143,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install wheel
-        python -m pip install .[bumps,DFO,gofit,gradient_free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
+        python -m pip install .[bumps,DFO,gofit,gradient_free,minuit,SAS,numdifftools,lmfit,nlopt]
         python -m pip install -r requirements.txt
-        echo y | python -c 'import paramonte'
     - name: 'Running Tests'
       run: |
         bash ci/unit_tests_default.sh
