--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,10 +99,7 @@ jobs:
       run: |
         ci/unit_tests.sh
     - name: 'Submit Coverage'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        coveralls --service=github
+      uses: coverallsapp/github-action@v2
     - name: 'Upload Test Results'
       if: always()
       uses: actions/upload-artifact@v3
