--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Installing
       run: |
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install -r requirements.txt
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[dev]
     - name: 'Running Tests'
       run: |
         ci/system_tests_default.sh
@@ -48,7 +48,7 @@ jobs:
     - name: Installing
       run: |
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,levmar,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install -r requirements.txt
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[dev]
         mkdir -p $MASTSIF
         mkdir -p $PYCUTEST_CACHE
     - name: 'Running Tests'
@@ -71,7 +71,7 @@ jobs:
     - name: Installing
       run: |
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient_free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install -r requirements.txt
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[dev]
     - name: 'Running Tests'
       run: |
         ci/unit_tests_default.sh
@@ -92,7 +92,7 @@ jobs:
     - name: Installing
       run: |
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient_free,levmar,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade -r requirements.txt
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[dev]
         mkdir -p $MASTSIF
         mkdir -p $PYCUTEST_CACHE
         sudo apt update
@@ -127,7 +127,7 @@ jobs:
         python -m pip install --upgrade pip==20.0.2
         python -m pip install --upgrade wheel
         pip install .[bumps,DFO,gofit,gradient_free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-        pip install -r requirements.txt
+        pip install .[dev]
     - name: 'Run Linting'
       run: |
         ci/linting_tests.sh
@@ -147,7 +147,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install wheel
         python -m pip install .[bumps,DFO,gofit,gradient_free,minuit,SAS,numdifftools,lmfit,nlopt]
-        python -m pip install -r requirements.txt
+        python -m pip install .[dev]
     - name: 'Running Tests'
       run: |
         bash ci/unit_tests_default.sh
