Changed coveralls test to use the coveralls GitHub action (#1206)
* Use coverals github action

* add deps temporarily

* Don't wait for input when installing temp requirements

* update apt repos

* Try with newer version of coverage

* Use an lcov file to report missing statements

* Linting fixes for latest versions of pylint/flake8

* Linting fix

* Pin linting

* Update fitbenchmarking/cli/main.py

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,17 +92,19 @@ jobs:
     - name: Installing
       run: |
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient_free,levmar,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install -r requirements.txt
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade -r requirements.txt
         mkdir -p $MASTSIF
         mkdir -p $PYCUTEST_CACHE
+        sudo apt update
+        sudo apt install -y curl
     - name: 'Running Tests'
       run: |
         ci/unit_tests.sh
     - name: 'Submit Coverage'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        coveralls --service=github
+      uses: coverallsapp/github-action@v2
+      with:
+        file: coverage.lcov
+        compare-ref: master
     - name: 'Upload Test Results'
       if: always()
       uses: actions/upload-artifact@v3
