plan B work with quickBayes

--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -1,35 +1,45 @@
 [FITTING]
 
 software: bumps
-          dfo
+          mantid
+	  dfo
           scipy_ls
-          minuit
+	  scipy
 
 num_runs: 1
-max_runtime: 600
+max_runtime: 6000
+
+jac_method: scipy
+
+[JACOBIAN]
+
+analytic: default
 
 [MINIMIZERS]
 
-bumps: lm-bumps
-       scipy-leastsq
+#bumps: scipy-leastsq
 
-dfo: dfogn
+mantid: Damped GaussNewton
+
+scipy: BFGS
+       CG
+       Newton-CG
 
 scipy_ls: lm-scipy
+
 
 # Note: this will not run unless ralfit is added to `software` in [FITTING]
 ralfit: gn
 
 [OUTPUT]
 
-make_plots: no
+make_plots: yes
 
 results_dir: new_results/
 
 table_type: acc
             runtime
             compare
-            local_min
 
 [LOGGING]
 
