--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -1,21 +1,28 @@
 [FITTING]
 
-software: bumps
-          dfo
-          scipy_ls
-          minuit
+software: scipy_ls
+          scipy
 
-num_runs: 1
+jac_method: scipy
+
+num_runs: 5
 max_runtime: 600
+
+[JACOBIAN]
+scipy: 2-point_sparse
 
 [MINIMIZERS]
 
-bumps: lm-bumps
-       scipy-leastsq
+scipy: CG
+       BFGS
+       Newton-CG
+       L-BFGS-B
+       TNC
+       SLSQP
 
+scipy_ls: dogbox
+          trf
 dfo: dfogn
-
-scipy_ls: lm-scipy
 
 # Note: this will not run unless ralfit is added to `software` in [FITTING]
 ralfit: gn
@@ -29,7 +36,6 @@ results_dir: new_results/
 table_type: acc
             runtime
             compare
-            local_min
 
 [LOGGING]
 
