Revert unnecessary changes

--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -1,28 +1,21 @@
 [FITTING]
 
-software: scipy_ls
-          scipy
+software: bumps
+          dfo
+          scipy_ls
+          minuit
 
-jac_method: scipy
-
-num_runs: 5
+num_runs: 1
 max_runtime: 600
-
-[JACOBIAN]
-scipy: 2-point_sparse
 
 [MINIMIZERS]
 
-scipy: CG
-       BFGS
-       Newton-CG
-       L-BFGS-B
-       TNC
-       SLSQP
+bumps: lm-bumps
+       scipy-leastsq
 
-scipy_ls: dogbox
-          trf
 dfo: dfogn
+
+scipy_ls: lm-scipy
 
 # Note: this will not run unless ralfit is added to `software` in [FITTING]
 ralfit: gn
@@ -36,6 +29,7 @@ results_dir: new_results/
 table_type: acc
             runtime
             compare
+            local_min
 
 [LOGGING]
 
