--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -139,18 +139,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
     - name: 'Choose Python Version'
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: '3.8'
     - name: Installing
       run: |
         python -m pip install --upgrade pip
-        python -m pip install wheel
         python -m pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
         python -m pip install --upgrade .[dev]
     - name: 'Running Tests'
       run: |
-        bash ci/unit_tests_default.sh
+        pytest fitbenchmarking/core/tests/test_fitting_benchmarking.py
+    - name: 'Env'
+      run: |
+        ppi freeze
 
   publish-test-results:
     name: 'Publish Test Results'
