--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,17 +141,16 @@ jobs:
     - name: 'Choose Python Version'
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.8'
     - name: Installing
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade wheel
+        python -m pip install wheel
         python -m pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
         python -m pip install --upgrade .[dev]
-        python -m pip freeze
     - name: 'Running Tests'
       run: |
-        pytest fitbenchmarking/core/tests/test_fitting_benchmarking.py
+      bash ci/unit_tests_default.sh
 
   publish-test-results:
     name: 'Publish Test Results'
