--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -150,7 +150,7 @@ jobs:
         python -m pip install --upgrade .[dev]
     - name: 'Running Tests'
       run: |
-        bash ci/unit_tests_default.sh
+        fitbenchmarking
 
   publish-test-results:
     name: 'Publish Test Results'
