--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -1,13 +1,14 @@
 [FITTING]
 
 software: bumps
-          mantid
-	  dfo
-          scipy_ls
-	  scipy
+          scipy
 
 num_runs: 1
 max_runtime: 6000
+
+#cost_func_type: nlls
+#cost_func_type: weighted_nlls
+cost_func_type: poisson
 
 jac_method: scipy
 
@@ -17,16 +18,15 @@ analytic: default
 
 [MINIMIZERS]
 
-#bumps: scipy-leastsq
+bumps: amoeba
+       de
 
-mantid: Damped GaussNewton
-
-scipy: BFGS
-       CG
-       Newton-CG
-
-scipy_ls: lm-scipy
-
+scipy: COBYLA
+       BFGS
+       L-BFGS-B
+       Powell
+       SLSQP
+       TNC
 
 # Note: this will not run unless ralfit is added to `software` in [FITTING]
 ralfit: gn
@@ -35,7 +35,10 @@ ralfit: gn
 
 make_plots: yes
 
-results_dir: new_results/
+
+#results_dir: new_results/nlls/
+results_dir: new_results/poisson/
+#results_dir: new_results/weighted/
 
 table_type: acc
             runtime
