--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,8 @@ jobs:
 
     - name: 'Build'
       run: |
-        python3 -m pip install --user --upgrade setuptools wheel
-        python3 setup.py sdist bdist_wheel
+        pip install build
+        python -m build
 
     - name: Publish distribution to PyPI
       if: startsWith(github.ref, 'refs/tags')
