--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,123 +14,129 @@ on:
   schedule:
     - cron: '0 9 * * Mon'
   workflow_dispatch:
+    inputs:
+      debug_enabled:
+        type: boolean
+        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
+        required: false
+        default: false
 
 jobs:
-  default_system_linux:
-    name: 'Default System Tests (Linux)'
-    runs-on: 'ubuntu-latest'
-    container:
-      image: 'fitbenchmarking/fitbenchmarking-deps:latest'
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Installing
-      run: |
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
-    - name: 'Running Tests'
-      run: |
-        ci/system_tests_default.sh
-    - name: 'Upload Test Results'
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        path: test-results/default_system_pytest.xml
+  # default_system_linux:
+  #   name: 'Default System Tests (Linux)'
+  #   runs-on: 'ubuntu-latest'
+  #   container:
+  #     image: 'fitbenchmarking/fitbenchmarking-deps:latest'
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v3
+  #   - name: Installing
+  #     run: |
+  #       sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
+  #       sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
+  #   - name: 'Running Tests'
+  #     run: |
+  #       ci/system_tests_default.sh
+  #   - name: 'Upload Test Results'
+  #     if: always()
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       path: test-results/default_system_pytest.xml
 
-  full_system_linux:
-    name: 'Full System Tests (Linux)'
-    runs-on: 'ubuntu-latest'
-    container:
-      image: 'fitbenchmarking/fitbenchmarking-extras:latest'
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Installing
-      run: |
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,levmar,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
-        mkdir -p $MASTSIF
-        mkdir -p $PYCUTEST_CACHE
-    - name: 'Running Tests'
-      run: |
-        ci/system_tests.sh
-    - name: 'Upload Test Results'
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        path: test-results/full_system_pytest.xml
+  # full_system_linux:
+  #   name: 'Full System Tests (Linux)'
+  #   runs-on: 'ubuntu-latest'
+  #   container:
+  #     image: 'fitbenchmarking/fitbenchmarking-extras:latest'
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v3
+  #   - name: Installing
+  #     run: |
+  #       sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,levmar,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
+  #       sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
+  #       mkdir -p $MASTSIF
+  #       mkdir -p $PYCUTEST_CACHE
+  #   - name: 'Running Tests'
+  #     run: |
+  #       ci/system_tests.sh
+  #   - name: 'Upload Test Results'
+  #     if: always()
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       path: test-results/full_system_pytest.xml
 
-  default_unit_linux:
-    name: 'Default Unit Tests (Linux)'
-    runs-on: 'ubuntu-latest'
-    container:
-      image: 'fitbenchmarking/fitbenchmarking-deps:latest'
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Installing
-      run: |
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
-    - name: 'Running Tests'
-      run: |
-        ci/unit_tests_default.sh
-    - name: 'Upload Test Results'
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        path: test-results/default_unit_pytest.xml
+  # default_unit_linux:
+  #   name: 'Default Unit Tests (Linux)'
+  #   runs-on: 'ubuntu-latest'
+  #   container:
+  #     image: 'fitbenchmarking/fitbenchmarking-deps:latest'
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v3
+  #   - name: Installing
+  #     run: |
+  #       sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
+  #       sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
+  #   - name: 'Running Tests'
+  #     run: |
+  #       ci/unit_tests_default.sh
+  #   - name: 'Upload Test Results'
+  #     if: always()
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       path: test-results/default_unit_pytest.xml
 
-  full_unit_linux:
-    name: 'Full Unit Tests (Linux)'
-    runs-on: 'ubuntu-latest'
-    container:
-      image: 'fitbenchmarking/fitbenchmarking-extras:latest'
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Installing
-      run: |
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient-free,levmar,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
-        mkdir -p $MASTSIF
-        mkdir -p $PYCUTEST_CACHE
-        sudo apt update
-        sudo apt install -y curl
-    - name: 'Running Tests'
-      run: |
-        ci/unit_tests.sh
-    - name: 'Submit Coverage'
-      uses: coverallsapp/github-action@v2
-      with:
-        file: coverage.lcov
-        compare-ref: master
-        git-commit: ${{ github.event.pull_request.head.sha }}
-    - name: 'Upload Test Results'
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        path: test-results/full_unit_pytest.xml
+  # full_unit_linux:
+  #   name: 'Full Unit Tests (Linux)'
+  #   runs-on: 'ubuntu-latest'
+  #   container:
+  #     image: 'fitbenchmarking/fitbenchmarking-extras:latest'
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v3
+  #   - name: Installing
+  #     run: |
+  #       sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient-free,levmar,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
+  #       sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
+  #       mkdir -p $MASTSIF
+  #       mkdir -p $PYCUTEST_CACHE
+  #       sudo apt update
+  #       sudo apt install -y curl
+  #   - name: 'Running Tests'
+  #     run: |
+  #       ci/unit_tests.sh
+  #   - name: 'Submit Coverage'
+  #     uses: coverallsapp/github-action@v2
+  #     with:
+  #       file: coverage.lcov
+  #       compare-ref: master
+  #       git-commit: ${{ github.event.pull_request.head.sha }}
+  #   - name: 'Upload Test Results'
+  #     if: always()
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       path: test-results/full_unit_pytest.xml
 
-  linting_linux:
-    name: 'Linting Tests (Linux)'
-    runs-on: 'ubuntu-latest'
-    steps:
-    - name: 'Checkout code'
-      uses: actions/checkout@v3
-    - name: 'Choose Python Version'
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.8'
-    - name: 'Installing'
-      run: |
-        python -m pip install --upgrade pip==20.0.2
-        python -m pip install --upgrade wheel
-        pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-        pip install --upgrade .[dev]
-    - name: 'Run Linting'
-      run: |
-        ci/linting_tests.sh
+  # linting_linux:
+  #   name: 'Linting Tests (Linux)'
+  #   runs-on: 'ubuntu-latest'
+  #   steps:
+  #   - name: 'Checkout code'
+  #     uses: actions/checkout@v3
+  #   - name: 'Choose Python Version'
+  #     uses: actions/setup-python@v4
+  #     with:
+  #       python-version: '3.8'
+  #   - name: 'Installing'
+  #     run: |
+  #       python -m pip install --upgrade pip==20.0.2
+  #       python -m pip install --upgrade wheel
+  #       pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
+  #       pip install --upgrade .[dev]
+  #   - name: 'Run Linting'
+  #     run: |
+  #       ci/linting_tests.sh
 
   default_unit_windows:
     name: 'Default Unit Tests (Windows)'
@@ -151,20 +157,23 @@ jobs:
     - name: 'Running Tests'
       run: |
         bash ci/unit_tests_default.sh
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
 
-  publish-test-results:
-    name: 'Publish Test Results'
-    needs: [default_system_linux, full_system_linux, default_unit_linux, full_unit_linux]
-    runs-on: 'ubuntu-latest'
-    if: always()
-    steps:
-      - name: 'Download Artifacts'
-        uses: actions/download-artifact@v3
-        with:
-          path: artifacts
+  # publish-test-results:
+  #   name: 'Publish Test Results'
+  #   needs: [default_system_linux, full_system_linux, default_unit_linux, full_unit_linux]
+  #   runs-on: 'ubuntu-latest'
+  #   if: always()
+  #   steps:
+  #     - name: 'Download Artifacts'
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         path: artifacts
 
-      - name: 'Publish Test Results'
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        with:
-          check_name: 'Unit & System Test Results'
-          files: artifacts/**/*.xml
+  #     - name: 'Publish Test Results'
+  #       uses: EnricoMi/publish-unit-test-result-action@v2
+  #       with:
+  #         check_name: 'Unit & System Test Results'
+  #         files: artifacts/**/*.xml
