--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -159,7 +159,7 @@ jobs:
         bash ci/unit_tests_default.sh
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
-      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
+      if: ${{ failure() && github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
 
   # publish-test-results:
   #   name: 'Publish Test Results'
