--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,27 +60,6 @@ jobs:
       with:
         path: test-results/full_system_pytest.xml
 
-  default_unit_linux:
-    name: 'Default Unit Tests (Linux)'
-    runs-on: 'ubuntu-latest'
-    container:
-      image: 'fitbenchmarking/fitbenchmarking-deps:latest'
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Installing
-      run: |
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
-    - name: 'Running Tests'
-      run: |
-        ci/unit_tests_default.sh
-    - name: 'Upload Test Results'
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        path: test-results/default_unit_pytest.xml
-
   full_unit_linux:
     name: 'Full Unit Tests (Linux)'
     runs-on: 'ubuntu-latest'
@@ -113,27 +92,58 @@ jobs:
         path: test-results/full_unit_pytest.xml
 
   linting_linux:
-    name: 'Linting Tests (Linux)'
+    name: Linting Tests (Linux)
     runs-on: 'ubuntu-latest'
     steps:
-    - name: 'Checkout code'
+    - name: Checkout code
       uses: actions/checkout@v3
-    - name: 'Choose Python Version'
-      uses: actions/setup-python@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.8'
-    - name: 'Installing'
+        python-version: '3.12'
+    - name: 'Install fitbenchmarking'
       run: |
-        python -m pip install --upgrade pip==20.0.2
-        python -m pip install --upgrade wheel
-        pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
+        pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
         pip install --upgrade .[dev]
     - name: 'Run Linting'
+      run: ci/linting_tests.sh
+
+  default_unit_linux:
+    name: 'Default Unit Tests (linux)'
+    runs-on: 'ubuntu-latest'
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+    container:
+      image: 'fitbenchmarking/fitbenchmarking-deps:latest'
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install packages for python 3.8, 3.9, 3.10 or 3.11
+      if: matrix.python-version == '3.8' || matrix.python-version == '3.9' || matrix.python-version == '3.10' || matrix.python-version == '3.11'
       run: |
-        ci/linting_tests.sh
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
+    - name: Install packages for python 3.12
+      if: matrix.python-version == '3.12'
+      run: |
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
+    - name: Install dev dependencies
+      run: sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
+    - name: 'Running Tests'
+      run: ci/unit_tests_default.sh
+    - name: 'Upload Test Results'
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        path: test-results/default_unit_pytest.xml
 
   default_unit_windows:
-    name: 'Default Unit Tests (Windows)'
+    name: 'Default Unit Tests'
     runs-on: 'windows-latest'
     steps:
     - name: Checkout code
@@ -141,7 +151,7 @@ jobs:
     - name: 'Choose Python Version'
       uses: actions/setup-python@v4
       with:
-        python-version: '3.8'
+        python-version: '3.12'
     - name: Installing
       run: |
         python -m pip install --upgrade pip
