--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python: ['3.8', '3.x']
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout code
@@ -107,6 +107,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python }}
+        check-latest: true
     - name: Install dependencies
       run: |
         python -m pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
@@ -118,7 +119,7 @@ jobs:
       if: runner.os == 'Windows'
       run: bash ci/unit_tests_default.sh
     - name: Upload test results
-      if: runner.os == 'Linux' && matrix.python == '3.12'
+      if: runner.os == 'Linux' && matrix.python == '3.x'
       uses: actions/upload-artifact@v4
       with:
         name: default_unit_tests
