Revert "Create action to manage tests container"
This reverts commit c2a627f926a82095b26fe4bb212a4f4729027437.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
   default_system_linux:
     name: Default System Tests (Linux)
     runs-on: ubuntu-latest
+    container:
+      image: 'fitbenchmarking/fitbenchmarking-deps:latest'
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -39,10 +41,7 @@ jobs:
     name: Full System Tests (Linux)
     runs-on: ubuntu-latest
     container:
-      image: 'ghcr.io/fitbenchmarking/fitbenchmarking:latest'
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      image: 'fitbenchmarking/fitbenchmarking-extras:latest'
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -65,10 +64,7 @@ jobs:
     name: Full Unit Tests (Linux)
     runs-on: ubuntu-latest
     container:
-      image: 'ghcr.io/fitbenchmarking/fitbenchmarking:latest'
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      image: 'fitbenchmarking/fitbenchmarking-extras:latest'
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
